autogen/prototype/proto/fortran/src/v1.9/containers/Grid.f03


!! THIS FILE WAS AUTOGENERATED!
!! DO NOT MODIFY!

module containersGrid
use iso_c_binding
interface


!! -----------------------------------------------------------------------------
!! Basics
!! Create, Assign, Delete
!! -----------------------------------------------------------------------------

!! Create, default, const
function GridDefaultConst() &
      bind(C, name='GridDefaultConst')
   use iso_c_binding
   implicit none
   type(c_ptr) :: GridDefaultConst
end function GridDefaultConst

!! Create, default
function GridDefault() &
      bind(C, name='GridDefault')
   use iso_c_binding
   implicit none
   type(c_ptr) :: GridDefault
end function GridDefault

!! Create, general, const
function GridCreateConst( &
   index, &
   interpolation, &
   label, &
   style, &
   unit, &
   labelSize, &
   unitSize &
) &
      bind(C, name='GridCreateConst')
   use iso_c_binding
   implicit none
   integer(c_int), value, intent(in) :: index
   unknownType, value, intent(in) :: interpolation
   integer(c_size_t), intent(in), value :: labelSize
   character(c_char), intent(in) :: label(labelSize)
   unknownType, value, intent(in) :: style
   integer(c_size_t), intent(in), value :: unitSize
   character(c_char), intent(in) :: unit(unitSize)
   type(c_ptr) :: GridCreateConst
end function GridCreateConst

!! Create, general
function GridCreate( &
   index, &
   interpolation, &
   label, &
   style, &
   unit, &
   labelSize, &
   unitSize &
) &
      bind(C, name='GridCreate')
   use iso_c_binding
   implicit none
   integer(c_int), value, intent(in) :: index
   unknownType, value, intent(in) :: interpolation
   integer(c_size_t), intent(in), value :: labelSize
   character(c_char), intent(in) :: label(labelSize)
   unknownType, value, intent(in) :: style
   integer(c_size_t), intent(in), value :: unitSize
   character(c_char), intent(in) :: unit(unitSize)
   type(c_ptr) :: GridCreate
end function GridCreate

!! Assign
subroutine GridAssign(handleLHS, handleRHS) &
      bind(C, name='GridAssign')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handleLHS, handleRHS
end subroutine GridAssign

!! Delete
subroutine GridDelete(handle) &
      bind(C, name='GridDelete')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
end subroutine GridDelete


!! -----------------------------------------------------------------------------
!! I/O
!! Read, Write, Print
!! Each returns 0 if failure, 1 if success.
!! -----------------------------------------------------------------------------

!! Read from file
function GridRead(handle, filename, filenameSize) &
      bind(C, name='GridRead')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: GridRead
end function GridRead

!! Write to file
function GridWrite(handle, filename, filenameSize) &
      bind(C, name='GridWrite')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: GridWrite
end function GridWrite

!! Print to standard output, in our prettyprinting format
function GridPrint(handle) &
      bind(C, name='GridPrint')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: GridPrint
end function GridPrint

!! Print to standard output, as XML
function GridPrintXML(handle) &
      bind(C, name='GridPrintXML')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: GridPrintXML
end function GridPrintXML

!! Print to standard output, as JSON
function GridPrintJSON(handle) &
      bind(C, name='GridPrintJSON')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: GridPrintJSON
end function GridPrintJSON


!! -----------------------------------------------------------------------------
!! Metadatum: index
!! -----------------------------------------------------------------------------

!! Has
function GridIndexHas(handle) &
      bind(C, name='GridIndexHas')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: GridIndexHas
end function GridIndexHas

!! Get
function GridIndexGet(handle) &
      bind(C, name='GridIndexGet')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: GridIndexGet
end function GridIndexGet

!! Set
subroutine GridIndexSet(handle, index, indexSize) &
      bind(C, name='GridIndexSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: indexSize
   character(c_char), intent(in) :: index(indexSize)
end subroutine GridIndexSet


!! -----------------------------------------------------------------------------
!! Metadatum: interpolation
!! -----------------------------------------------------------------------------

!! Has
function GridInterpolationHas(handle) &
      bind(C, name='GridInterpolationHas')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: GridInterpolationHas
end function GridInterpolationHas

!! Get
function GridInterpolationGet(handle) &
      bind(C, name='GridInterpolationGet')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   unknownType :: GridInterpolationGet
end function GridInterpolationGet

!! Set
subroutine GridInterpolationSet(handle, interpolation, interpolationSize) &
      bind(C, name='GridInterpolationSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: interpolationSize
   character(c_char), intent(in) :: interpolation(interpolationSize)
end subroutine GridInterpolationSet


!! -----------------------------------------------------------------------------
!! Metadatum: label
!! -----------------------------------------------------------------------------

!! Has
function GridLabelHas(handle) &
      bind(C, name='GridLabelHas')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: GridLabelHas
end function GridLabelHas

!! Get
function GridLabelGet(handle) &
      bind(C, name='GridLabelGet')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: GridLabelGet
end function GridLabelGet

!! Set
subroutine GridLabelSet(handle, label, labelSize) &
      bind(C, name='GridLabelSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: labelSize
   character(c_char), intent(in) :: label(labelSize)
end subroutine GridLabelSet


!! -----------------------------------------------------------------------------
!! Metadatum: style
!! -----------------------------------------------------------------------------

!! Has
function GridStyleHas(handle) &
      bind(C, name='GridStyleHas')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: GridStyleHas
end function GridStyleHas

!! Get
function GridStyleGet(handle) &
      bind(C, name='GridStyleGet')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   unknownType :: GridStyleGet
end function GridStyleGet

!! Set
subroutine GridStyleSet(handle, style, styleSize) &
      bind(C, name='GridStyleSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: styleSize
   character(c_char), intent(in) :: style(styleSize)
end subroutine GridStyleSet


!! -----------------------------------------------------------------------------
!! Metadatum: unit
!! -----------------------------------------------------------------------------

!! Has
function GridUnitHas(handle) &
      bind(C, name='GridUnitHas')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: GridUnitHas
end function GridUnitHas

!! Get
function GridUnitGet(handle) &
      bind(C, name='GridUnitGet')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: GridUnitGet
end function GridUnitGet

!! Set
subroutine GridUnitSet(handle, unit, unitSize) &
      bind(C, name='GridUnitSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: unitSize
   character(c_char), intent(in) :: unit(unitSize)
end subroutine GridUnitSet


!! -----------------------------------------------------------------------------
!! -----------------------------------------------------------------------------

end interface
end module containersGrid
